--- a/_posts/2015-09-20-WATTBA.md
+++ b/_posts/2015-09-20-WATTBA.md
@@ -7,4 +7,4 @@ date: 2015-09-20-12-43
 ---
 
 
-It's the end of summer. I'm going to miss the heat but I'm looking forward to all of the films coming out later this year and wearing sweaters again!
+It's the end of summer. I'm going to miss the heat but I'm looking forward to all of the films coming out later this year and wearing sweaters again.
